Translates SSSurvivor tooltip
Contributes to #10

--- a/translations/es.json
+++ b/translations/es.json
@@ -56,7 +56,7 @@
   "tooltip.gross": "Todo el dinero ganado o recibido antes de las deducciones, como el impuesto a las ganancias, impuesto del Seguro Social o primas de seguros.",
   "tooltip.eligibility": "Consulte la sección Ayuda para ver las Pautas de elegibilidad por Ingresos para obtener beneficios de precio reducido.",
   "tooltip.ssiChildren": "Los ingresos de seguridad suplementarios (SSI) proporcionan efectivo para satisfacer las necesidades básicas de alimentos, vestimenta y refugio para niños menores de 18 años que tengan una afección física o mental, o una combinación de afecciones, que cumplen con la definición de discapacidad en niños del Seguro Social, y si los ingresos y recursos de los niños cumplen con los límites de elegibilidad.",
-  "tooltip.ssSurvivor": "Los beneficios para sobrevivientes del Seguro Social son pagos mensuales para los hijos de un padre fallecido que se había jubilado o que estaba discapacitado, pero que trabajó y pagó impuestos en el sistema del Seguro Social.",
+  "tooltip.ssSurvivor": "Los beneficios para sobrevivientes del Seguro Social son pagos mensuales para los hijos de un padre fallecido, jubilados o discapacitados que trabajaron y paragon impuestos en el sistema de Seguro Social.",
   "tooltip.pensionChildren": "Un niño puede recibir pagos de la pensión de un padre fallecido.",
   "tooltip.annuityChildren": "Un niño puede recibir los pagos de una anualidad. Consulte la sección de Ayuda para ver la definición de anualidad.",
   "tooltip.mckinney": "Le proporciona dinero federal a los programas de refugio para las personas sin vivienda y les facilita el acceso a escuelas públicas a los niños y jóvenes sin vivienda.",
