translate help text for sssurvivor
closes #10

--- a/translations/es.json
+++ b/translations/es.json
@@ -560,7 +560,7 @@
   "help.articles.helpText.ssiChildrenTerm": "Ingreso de seguridad suplementario (SSI) para niños",
   "help.articles.helpText.ssiChildrenDef": "El ingreso de seguridad suplementario (SSI) proporciona efectivo para cubrir las necesidades básicas de alimentos, vestimenta y asilo de niños menores a 18 años que padezcan una afección física o mental, o combinación de afecciones, que cumple con la definición de discapacidad de Seguridad Social, y su ingreso y recursos cumplen con los límites de elegibilidad.",
   "help.articles.helpText.ssSurvivorTerm": "Beneficios de Seguridad Social del sobreviviente para niños",
-  "help.articles.helpText.ssSurvivorDef": "Los beneficios de Seguridad Social son pagos mensuales para niños hijos de un padre fallecido que estaba jubilado o sufría una discapacidad, pero que trabajó y pagó impuestos en el sistema de Seguridad Social.",
+  "help.articles.helpText.ssSurvivorDef": "Los beneficios para sobrevivientes del Seguro Social son pagos mensuales para los hijos de un padre fallecido, jubilados o discapacitados que trabajaron y paragon impuestos en el sistema de Seguro Social.",
   "help.articles.helpText.pensionBeneficiaryTerm": "Beneficiario de una pensión o sobreviviente para niños",
   "help.articles.helpText.pensionBeneficiaryDef": "Un niño puede recibir pagos de la pensión de un padre fallecido.",
   "help.articles.helpText.annuityChildrenTerm": "Anualidades para niños",
