--- a/translations/es.json
+++ b/translations/es.json
@@ -204,8 +204,8 @@
   "app.slides.childIncomeOverview.intro": "Las siguientes preguntas son sobre {tooltip}",
   "app.slides.childIncomeOverview.sources": "Algunas fuentes comunes de ingresos de los niños son las siguientes:",
   "app.slides.childIncomeOverview.fullOrPartJob": "un trabajo de tiempo completo o medio tiempo,",
-  "app.slides.childIncomeOverview.socialSecurity": "{socialSecurity}, si el niño es ciego o discapacitado, o es {beneficiary} de los beneficios del Seguro Social de otra persona,",
-  "app.slides.childIncomeOverview.social": "beneficios del Seguro Social",
+  "app.slides.childIncomeOverview.socialSecurity": "Ingresos de seguridad suplementarios {socialSecurity}, si el niño es ciego o discapacitado, o es {beneficiary} de los beneficios del Seguro Social de otra persona,",
+  "app.slides.childIncomeOverview.social": "(SSI)",
   "app.slides.childIncomeOverview.benefit": "beneficiario",
   "app.slides.childIncomeOverview.money": "dinero recibido regularmente proveniente de la familia extendida o de amigos que no viven en el hogar, o",
   "app.slides.childIncomeOverview.moneyFrom": "dinero que recibe por una {pension}, {annuity}, o {trust}",
