translate annuity def to child annuity help
#35

--- a/translations/es.json
+++ b/translations/es.json
@@ -564,7 +564,7 @@
   "help.articles.helpText.pensionBeneficiaryTerm": "Beneficiario de una pensión o sobreviviente para niños",
   "help.articles.helpText.pensionBeneficiaryDef": "Un niño puede recibir pagos de la pensión de un padre fallecido.",
   "help.articles.helpText.annuityChildrenTerm": "Anualidades para niños",
-  "help.articles.helpText.annuityChildrenDef": "Un niño puede recibir pagos de una anualidad. Consulte la sección de Ayuda para obtener una definición de anualidad.",
+  "help.articles.helpText.annuityChildrenDef": "Un niño puede recibir pagos de una anualidad. La anualidad es una serie de pagos por contrato que se realizan en intervalos regulares por un período de más de un año. Pueden ser fijos (por los que recibe una cantidad fija) o variables (no fijos). Los individuos pueden adquirir la anualidad por su cuenta o con la ayuda de un empleador.",
 
   "help.topic.household.question": "¿A quién debo incluir en mi hogar?",
   "help.topic.household.answer1": "Un hogar se define como un grupo de personas, relacionadas o no, que suelen vivir juntas y compartir ingresos y gastos.",
