add MHPI to translated help topic
#34

--- a/translations/es.json
+++ b/translations/es.json
@@ -667,7 +667,7 @@
   "help.topic.WhatIncome.answer37": "No tenemos en cuenta ingresos provenientes de:",
   "help.topic.WhatIncome.answer38": "Pagos irregulares por horas extra",
   "help.topic.WhatIncome.answer39": "Asignación suplementaria de subsistencia familiar (FSSA) para militares",
-  "help.topic.WhatIncome.answer40": "Iniciativa de privatización de la vivienda militar",
+  "help.topic.WhatIncome.answer40": "Iniciativa de privatización de la vivienda militar (MHPI)",
   "help.topic.WhatIncome.answer41": "Pago por combate cuando:",
   "help.topic.WhatIncome.answer42": "Se recibe además del pago básico del miembro del servicio.",
   "help.topic.WhatIncome.answer43": "Se recibe como resultado del despliegue o servicio en un área que ha sido designada como zona de combate.",
