--- a/translations/es.json
+++ b/translations/es.json
@@ -597,7 +597,7 @@
   "help.topic.NotTheSame.question": "¿Qué ocurre si mis ingresos varían?",
   "help.topic.NotTheSame.answer1": "Si sus ingresos varían mes a mes debido al tiempo extra, pagos por vacaciones, porque se ausentó a algunos turnos o por alguna otra razón, ingrese el monto que hubiera ganado si eso no hubiera ocurrido. Por ejemplo, si suele ganar $1000 por mes pero faltó al trabajo el último mes y solo ganó $900, ingrese $1000 por mes. De manera similar, si normalmente gana $500 por mes pero realizó trabajo extra y ganó $750, ingrese que gana $500 por mes.",
   "help.topic.NotTheSame.answer2": "Si trabaja por temporada, en agricultura o turismo, y algunos meses gana más dinero que otros, es posible que desee declarar sus ingresos anualmente.",
-  "help.topic.NotTheSame.answer3": "Si recibe un único pago, no debe informarlo como ingreso mensual actual porque no lo recibe de forma regular. Sin embargo, si recibe un pago único, de recompensas, acuerdos, herencias o premios, y más adelante utiliza ese dinero regularmente para gastos de vivienda, debe informar el monto utilizado en su solicitud de beneficios de comidas.",
+  "help.topic.NotTheSame.answer3": "Si recibe un único pago, no debe informarlo como ingreso mensual actual porque no lo recibe de forma regular. Sin embargo, si recibe un pago único, de recompensas, acuerdos, herencias, o premios, y más adelante utiliza ese dinero regularmente para gastos de vivienda, debe informar el monto utilizado en su solicitud de beneficios de comidas.",
   "help.topic.NotTheSame.answer4": "Si necesita ayuda o información adicional sobre cómo informar su ingreso, comuníquese con {organizationName} al {organizationContactInfo} y lo ayudarán a calcular su índice anual de ingresos de acuerdo con las pautas del Departamento de Agricultura de los Estados Unidos (United States Department of Agriculture, USDA).",
 
   "help.topic.paperApp.question": "¿Puedo utilizar una solicitud en papel?",
@@ -618,7 +618,7 @@
 
   "help.topic.RegularCash.term": "Pagos regulares en efectivo por parte de personas que no viven en el hogar",
   "help.topic.RegularCash.definition1": "Los pagos regulares en efectivo por parte de personas que no viven en el hogar es dinero que reciben regularmente por parte de familiares o amigos que no viven con usted. Por ejemplo, si sus padres o abuelos lo ayudan regularmente a cubrir los gastos de alimentos, facturas, o alquiler, el dinero se considera ingresos del hogar y debe declararlo en su solicitud para beneficios de comidas escolares.",
-  "help.topic.RegularCash.definition2": "Los pagos únicos no deben declararse como actuales o como ingresos mensuales ya que no los recibe de manera regular. Sin embargo, si recibe un pago único como recompensas, arreglos, herencias o premios y luego utiliza ese dinero para cubrir gastos de vivienda más adelante, el monto realizado debe declararse en la solicitud para obtener beneficios de comidas escolares en el lugar de “Otros ingresos disponibles para pagar las comidas escolares de los niños”.",
+  "help.topic.RegularCash.definition2": "Los pagos únicos no deben declararse como actuales o como ingresos mensuales ya que no los recibe de manera regular. Sin embargo, si recibe un pago único como recompensas, arreglos, herencias, o premios y luego utiliza ese dinero para cubrir gastos de vivienda más adelante, el monto realizado debe declararse en la solicitud para obtener beneficios de comidas escolares en el lugar de “Otros ingresos disponibles para pagar las comidas escolares de los niños”.",
 
   "help.topic.ReportCombat.question": "¿Tengo que declarar mi pago por combate como ingresos en la solicitud?",
   "help.topic.ReportCombat.answer1": "No, siempre que cumpla con las siguientes condiciones:",
@@ -658,7 +658,7 @@
   "help.topic.WhatIncome.answer28": "Pensiones",
   "help.topic.WhatIncome.answer29": "Asistencia financiera universitaria para pensión completa (gastos de vivienda), no incluye becas Pell grants, Supplemental Education Opportunity Grants (Beca suplementaria para oportunidades educativas), State Student Incentive Grants (Becas estatales para incentivo de estudiantes), préstamos nacionales directos para estudiantes (National Direct Student Loans), PLUS, College Work Study, o Programas Byrd Honor Scholarship",
   "help.topic.WhatIncome.answer30": "Pagos regulares en efectivo por parte de una persona que no vive en el hogar (p. ej., dinero que recibe regularmente de familia o amigos que no viven en el hogar)",
-  "help.topic.WhatIncome.answer31": "Pagos o extracciones regulares de fuentes como recompensas, arreglos, herencias o premios",
+  "help.topic.WhatIncome.answer31": "Pagos o extracciones regulares de fuentes como recompensas, arreglos, herencias, o premios",
   "help.topic.WhatIncome.answer32": "Ingresos netos de propiedades alquiladas",
   "help.topic.WhatIncome.answer33": "Intereses acumulados",
   "help.topic.WhatIncome.answer34": "Anualidades",
