change SSN text based on SSA description
#16

--- a/translations/es.json
+++ b/translations/es.json
@@ -512,7 +512,7 @@
   "help.articles.helpText.noIncomeTitle": "¿Qué sucede si algún miembro del hogar no tiene una declaración de ingresos?",
   "help.articles.helpText.noIncomeBody": "Debe mencionar a estos miembros de su hogar en la solicitud de todas maneras. Los miembros del hogar pueden no ganar o recibir algún tipo de ingresos que le pedimos que declare, o pueden no tener ningún tipo de ingresos. Recuerde, que la determinación de su elegibilidad se basa en los ingresos del hogar y en el tamaño del hogar. Para obtener más información sobre a quién incluir en la solicitud, vea “¿A QUIÉN DEBO INCLUIR COMO MIEMBRO DE MI HOGAR?” en la sección de Preguntas frecuentes.",
   "help.articles.helpText.ssnTitle": "¿Qué sucede si no tengo número de Seguridad Social?",
-  "help.articles.helpText.ssnBody": "No se preocupe, no es necesario que tenga un número de Seguridad Social para recibir beneficios gratis o a precioreducido.",
+  "help.articles.helpText.ssnBody": "No se preocupe, no necesita tener un número de Seguro Social para recibir beneficios de comida gratis oa precio reducido.",
   "help.articles.helpText.contactTitle": "¿Tengo que proporcionar mi información de contacto?",
   "help.articles.helpText.contactBody": "No, pero sería útil tener su información de contacto en caso de que necesitemos comunicarnos con usted por su solicitud. Además, si su información de contacto cambia en algún momento, debe informarnos para que podamos mantener información actualizada sobre su hogar durante todo el año.",
   "help.articles.helpText.disagreeTitle": "¿Qué sucede si no estoy de acuerdo con la decisión de la escuela con respecto a mi solicitud?",
