--- a/docs/translations/es.json
+++ b/docs/translations/es.json
@@ -55,7 +55,7 @@
   "tooltip.deployed": "Preguntamos porque solo contamos con la parte de ingresos de un miembro del servicio que han desplegado que está disponible para el hogar.",
   "tooltip.gross": "Todo el dinero ganado o recibido antes de las deducciones, como el impuesto a las ganancias, impuesto del Seguro Social o primas de seguros.",
   "tooltip.eligibility": "Consulte la sección Ayuda para ver las Pautas de elegibilidad por Ingresos para obtener beneficios de precio reducido.",
-  "tooltip.ssiChildren": "Los ingresos de seguridad suplementarios (SSI) proporcionan efectivo para satisfacer las necesidades básicas de alimentos, vestimenta y refugio para niños menores de 18 años que tengan una afección física o mental, o una combinación de afecciones, que cumplen con la definición de discapacidad en niños del Seguro Social, y si los ingresos y recursos de los niños cumplen con los límites de elegibilidad.",
+  "tooltip.ssiChildren": "Los Seguridad de Ingreso Suplementario (SSI) proporcionan efectivo para satisfacer las necesidades básicas de alimentos, vestimenta y refugio para niños menores de 18 años que tengan una afección física o mental, o una combinación de afecciones, que cumplen con la definición de discapacidad en niños del Seguro Social, y si los ingresos y recursos de los niños cumplen con los límites de elegibilidad.",
   "tooltip.ssSurvivor": "Los beneficios para sobrevivientes del Seguro Social son pagos mensuales para los hijos de un padre fallecido, jubilados o discapacitados que trabajaron y paragon impuestos en el sistema de Seguro Social.",
   "tooltip.pensionChildren": "Un niño puede recibir pagos de la pensión de un padre fallecido.",
   "tooltip.annuityChildren": "Un niño puede recibir los pagos de una anualidad. Consulte la sección de Ayuda para ver la definición de anualidad.",
@@ -124,7 +124,7 @@
   "app.slides.adultIncomeOverview.employmentQuestion": "¿{adult} cuenta con ingresos profesionales incluidos los salarios, sueldos, propinas, comisiones, {tooltip} o ingresos netos como {tooltip2}",
   "app.slides.adultIncomeOverview.cashBonus": "bonos en efectivo",
   "app.slides.adultIncomeOverview.selfEmployment": "autónomo",
-  "app.slides.adultIncomeOverview.publicAssistanceIncome": "¿{adult} recibe ingresos de asistencia pública como ingresos de seguridad suplementarios {tooltip}, o {tooltip2} o subsidios de vivienda por parte del gobierno estatal o local?",
+  "app.slides.adultIncomeOverview.publicAssistanceIncome": "¿{adult} recibe ingresos de asistencia pública como Seguridad de Ingreso Suplementario {tooltip}, o {tooltip2} o subsidios de vivienda por parte del gobierno estatal o local?",
   "app.slides.adultIncomeOverview.ssi": "(SSI)",
   "app.slides.adultIncomeOverview.cashAssistance": "asistencia en efectivo",
   "app.slides.adultIncomeOverview.spousalIncome": "¿{adult} recibe {tooltip} o {tooltip2}?",
@@ -204,7 +204,7 @@
   "app.slides.childIncomeOverview.intro": "Las siguientes preguntas son sobre {tooltip}",
   "app.slides.childIncomeOverview.sources": "Algunas fuentes comunes de ingresos de los niños son las siguientes:",
   "app.slides.childIncomeOverview.fullOrPartJob": "un trabajo de tiempo completo o medio tiempo,",
-  "app.slides.childIncomeOverview.socialSecurity": "Beneficios de Seguridad de Ingreso Suplementario {socialSecurity}, si el niño está discapacitado, beneficios de {beneficiary} para hijos de un padre discapacitado, retirado o fallecido,",
+  "app.slides.childIncomeOverview.socialSecurity": "Seguridad de Ingreso Suplementario {socialSecurity}, si el niño está discapacitado, beneficios de {beneficiary} para hijos de un padre discapacitado, retirado o fallecido,",
   "app.slides.childIncomeOverview.social": "(SSI)",
   "app.slides.childIncomeOverview.benefit": "Seguro Social",
   "app.slides.childIncomeOverview.money": "dinero recibido regularmente proveniente de la familia extendida o de amigos que no viven en el hogar, o",
@@ -223,7 +223,7 @@
   "app.slides.childIncomeSlide.childGross": "{grossIncome}  se refiere a todo el dinero ganado o recibido antes de las deducciones, como el impuesto a las ganancias, impuesto del Seguro Social o primas de seguros. No debe declarar sus ingresos netos, que es el monto de dinero recibido en un cheque de pago. Los ingresos netos son los ingresos totales (o brutos), menos los impuestos y las deducciones, y comúnmente se lo llama “salario de bolsillo.”",
   "app.slides.childIncomeSlide.grossIncome": "Ingresos brutos",
   "app.slides.childIncomeSlide.moneyEarned": "Dinero ganado en un trabajo de tiempo completo o medio tiempo.",
-  "app.slides.childIncomeSlide.supplementalIncome": "Los Ingresos de seguridad suplementarios {tooltip} o {tooltip2} del Seguro Social",
+  "app.slides.childIncomeSlide.supplementalIncome": "Los Seguridad de Ingreso Suplementario {tooltip} o {tooltip2} del Seguro Social",
   "app.slides.childIncomeSlide.ssiChildren": "(SSI)",
   "app.slides.childIncomeSlide.ssSurvivor": "beneficios para sobrevivientes",
   "app.slides.childIncomeSlide.regularCash": "{tooltip} de la familia extendida o de amigos que no viven en el hogar",
@@ -344,7 +344,7 @@
   "app.slides.otherProgramsProgram.whichStudents": "¿Qué estudiantes?",
   "app.slides.otherProgramsProgram.labelPrefix": "{studentLength, plural, one {Does} other {Do}} {students}",
 
-  "app.slides.publicAssistanceIncome.ssi": "Ingresos de seguridad suplementarios {tooltip}",
+  "app.slides.publicAssistanceIncome.ssi": "Seguridad de Ingreso Suplementario {tooltip}",
   "app.slides.publicAssistanceIncome.ssiToolTip": "(SSI)",
   "app.slides.publicAssistanceIncome.cashAssistance": "{tooltip} por parte del gobierno estatal o local (incluidos los subsidios de viviendas)",
   "app.slides.publicAssistanceIncome.cashAssistanceToolTip": "Asistencia  en efectivo",
@@ -356,7 +356,8 @@
   "app.slides.retirementIncome.pension": "Pensión",
 
   "app.slides.signature.almostDone": "Excelente, ya casi termina.",
-  "app.slides.signature.pleaseProvide": "Proporcione los últimos cuatro dígitos del número de Seguro Social de la persona que firmó al comienzo de esta solicitud {adult}. Si esa persona no tiene un número de Seguro Social, marque la casilla que figura a continuación llamada ‘Sin {ssn}.’",  "app.slides.signature.noSSN": "Sin SSN",
+  "app.slides.signature.pleaseProvide": "Proporcione los últimos cuatro dígitos del número de Seguro Social de la persona que firmó al comienzo de esta solicitud {adult}. Si esa persona no tiene un número de Seguro Social, marque la casilla que figura a continuación llamada ‘Sin {ssn}.’",
+  "app.slides.signature.noSSN": "Sin SSN",
   "app.slides.signature.note": "Nota: la ciudadanía de los Estados Unidos o el estado de inmigración no son condiciones de elegibilidad para obtener beneficios de comidas gratis o a precio reducido. Los beneficios que no sean en efectivo que reciba mediante programas de comidas escolares no están sujetos a consideraciones de cargo público. Es decir, no será deportado, no se le negará la entrada al país ni se le negará el estado permanente porque solicita o recibe beneficios de comidas escolares.",
 
   "app.slides.spousalIncome.alimony": "Pensión alimenticia",
@@ -400,7 +401,7 @@
   "app.slides.summaryPersonIncomeLineItem.description.employment.commission": "Comisiones",
   "app.slides.summaryPersonIncomeLineItem.description.employment.cashBonus": "Bono en efectivo",
   "app.slides.summaryPersonIncomeLineItem.description.employment.selfEmployment": "Ingresos como empleado autónomo",
-  "app.slides.summaryPersonIncomeLineItem.description.publicAssistance.ssi": "Ingresos de seguridad suplementarios (SSI)",
+  "app.slides.summaryPersonIncomeLineItem.description.publicAssistance.ssi": "Seguridad de Ingreso Suplementario (SSI)",
   "app.slides.summaryPersonIncomeLineItem.description.publicAssistance.stateLocal": "Asistencia en efectivo por parte del gobierno estatal o local",
   "app.slides.summaryPersonIncomeLineItem.description.spousal.alimony": "Pensión alimenticia",
   "app.slides.summaryPersonIncomeLineItem.description.spousal.childSupport": "Manutención infantil",
@@ -469,7 +470,7 @@
   "help.articles.helpText.usCitizenTitle": "¿Puedo enviar la solicitud aunque alguien de mi familia no sea ciudadano estadounidense?",
   "help.articles.helpText.usCitizenBody": "Sí. Usted, sus niños u otros miembros de la familia no tienen que ser ciudadanos estadounidenses para solicitar comidas gratis o a precio reducido.",
   "help.articles.helpText.publicChargeTitle": "¿Mi hijo o yo tendremos que pagar un cargo público si solicito o recibo beneficios de comidas escolares?",
-  "help.articles.helpText.publicChargeBody": "No, los beneficios que no sean en efectivo recibidos mediante el Programa Nacional de Almuerzos Escolares y los Programa de Desayunos Escolares no están sujetos a consideraciones de cargos públicos. Es decir, no será deportado, ni se le negará la entrada al país, ni se le negará el estado permanente porque solicite o reciba beneficios de comidas escolares.",
+  "help.articles.helpText.publicChargeBody": "No, los beneficios que no sean en efectivo recibidos mediante el Programa Nacional de Almuerzos Escolares y el Programa de Desayunos Escolares no están sujetos a consideraciones de cargos públicos. Es decir, no será deportado, ni se le negará la entrada al país, ni se le negará el estado permanente porque solicite o reciba beneficios de comidas escolares.",
   "help.articles.helpText.checkedTitle": "¿La información que proporcione se verificará?",
   "help.articles.helpText.FormattedMessage": "Sí, el distrito verifica cada solicitud para determinar la elegibilidad. También podemos solicitarle que envíe pruebas de los ingresos de su hogar.",
   "help.articles.helpText.sharedCustodyTitle": "¿Qué sucede si comparto la custodia de mi hijo?",
@@ -511,7 +512,7 @@
   "help.articles.helpText.noIncomeTitle": "¿Qué sucede si algún miembro del hogar no tiene una declaración de ingresos?",
   "help.articles.helpText.noIncomeBody": "Debe mencionar a estos miembros de su hogar en la solicitud de todas maneras. Los miembros del hogar pueden no ganar o recibir algún tipo de ingresos que le pedimos que declare, o pueden no tener ningún tipo de ingresos. Recuerde, que la determinación de su elegibilidad se basa en los ingresos del hogar y en el tamaño del hogar. Para obtener más información sobre a quién incluir en la solicitud, vea “¿A QUIÉN DEBO INCLUIR COMO MIEMBRO DE MI HOGAR?” en la sección de Preguntas frecuentes.",
   "help.articles.helpText.ssnTitle": "¿Qué sucede si no tengo número de Seguridad Social?",
-  "help.articles.helpText.ssnBody": "No se preocupe, no es necesario que tenga un número de Seguridad Social para recibir beneficios gratis o a precioreducido.",
+  "help.articles.helpText.ssnBody": "No se preocupe, no necesita tener un número de Seguro Social para recibir beneficios de comida gratis oa precio reducido.",
   "help.articles.helpText.contactTitle": "¿Tengo que proporcionar mi información de contacto?",
   "help.articles.helpText.contactBody": "No, pero sería útil tener su información de contacto en caso de que necesitemos comunicarnos con usted por su solicitud. Además, si su información de contacto cambia en algún momento, debe informarnos para que podamos mantener información actualizada sobre su hogar durante todo el año.",
   "help.articles.helpText.disagreeTitle": "¿Qué sucede si no estoy de acuerdo con la decisión de la escuela con respecto a mi solicitud?",
@@ -526,7 +527,7 @@
   "help.articles.helpText.currentDef": "Los ingresos actuales son los ingresos ganados o recibidos el mes actual o el mes anterior a esta solicitud.",
   "help.articles.helpText.cashBonusTerm": "Bono en efectivo",
   "help.articles.helpText.cashBonusDef": "Un bono en efectivo es una suma global de dinero que se le otorga a un empleado, ya sea de manera ocasional o periódica.",
-  "help.articles.helpText.ssiTerm": "Ingresos de seguridad suplementarios (SSI)",
+  "help.articles.helpText.ssiTerm": "Seguridad de Ingreso Suplementario (SSI)",
   "help.articles.helpText.ssiDef": "El ingreso de seguridad suplementario (SSI) le brinda dinero en efectivo para satisfacer sus necesidades básicas de alimentos, vestimenta y hogar a personas ancianas, ciegas y discapacitadas que tienen ingresos bajos o que no tienen ingresos.",
   "help.articles.helpText.cashAssistanceTerm": "Asistencia en efectivo del gobierno local o estatal",
   "help.articles.helpText.cashAssistanceDef": "El ingreso en forma de beneficios en efectivo, incluida la asistencia de vivienda de parte de programas gubernamentales estatales o locales debe declararse como ingreso de vivienda. Si tiene alguna pregunta sobre si debe incluir beneficios de un programa específico, comuníquese con {organizationName} ({organizationPhone} / {organizationEmail} / {organizationAddress}).",
@@ -641,7 +642,7 @@
   "help.topic.WhatIncome.answer12": "Ingresos de salarios y de empleados autónomos",
   "help.topic.WhatIncome.answer13": "Prestaciones por huelga",
   "help.topic.WhatIncome.answer14": "Ingresos previstos para trabajadores de temporada",
-  "help.topic.WhatIncome.answer15": "Ingresos de seguridad suplementarios (SSI)",
+  "help.topic.WhatIncome.answer15": "Seguridad de Ingreso Suplementario (SSI)",
   "help.topic.WhatIncome.answer16": "Beneficios para veteranos",
   "help.topic.WhatIncome.answer17": "Asistencia de dinero en efectivo del estado o del gobierno local",
   "help.topic.WhatIncome.answer18": "Subsidios para viviendas (no incluye aquellos de los programas Federales de viviendas)",
