--- a/docs/translations/es.json
+++ b/docs/translations/es.json
@@ -528,7 +528,7 @@
   "help.articles.helpText.cashBonusTerm": "Bono en efectivo",
   "help.articles.helpText.cashBonusDef": "Un bono en efectivo es una suma global de dinero que se le otorga a un empleado, ya sea de manera ocasional o periódica.",
   "help.articles.helpText.ssiTerm": "Seguridad de Ingreso Suplementario (SSI)",
-  "help.articles.helpText.ssiDef": "El ingreso de seguridad suplementario (SSI) le brinda dinero en efectivo para satisfacer sus necesidades básicas de alimentos, vestimenta y hogar a personas ancianas, ciegas y discapacitadas que tienen ingresos bajos o que no tienen ingresos.",
+  "help.articles.helpText.ssiDef": "El Seguridad de Ingreso Suplementario (SSI) le brinda dinero en efectivo para satisfacer sus necesidades básicas de alimentos, vestimenta y hogar a personas ancianas, ciegas y discapacitadas que tienen ingresos bajos o que no tienen ingresos.",
   "help.articles.helpText.cashAssistanceTerm": "Asistencia en efectivo del gobierno local o estatal",
   "help.articles.helpText.cashAssistanceDef": "El ingreso en forma de beneficios en efectivo, incluida la asistencia de vivienda de parte de programas gubernamentales estatales o locales debe declararse como ingreso de vivienda. Si tiene alguna pregunta sobre si debe incluir beneficios de un programa específico, comuníquese con {organizationName} ({organizationPhone} / {organizationEmail} / {organizationAddress}).",
   "help.articles.helpText.alimonyTerm": "Pensión alimenticia",
